--- a/src/html/home.html
+++ b/src/html/home.html
@@ -10,82 +10,68 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
             
-    <title>Home</title>
+    <title>Login</title>
 </head>
 <body>
     <div class="container center">
-        <h4>Welcome to</h4>
-        <img src="https://i.ibb.co/gdbSRYS/pngfind-com-uae-flag-png-5861568.png" width="400">
         <br>
         <br>
-        <!-- <a class="btn-large" href="/login">Create Mission</a> -->
+        <br>
+        <img src="https://images-na.ssl-images-amazon.com/images/I/31jykaOuf9L._AC_SX466_.jpg" width="400">
+        <br>
+        <br>
+        <div class="row">
+            <form class="col s12">
+              <div class="row">
+                <div class="input-field col s12">
+                  <input id="userid" type="text">
+                  <label for="userid">User ID</label>
+                </div>
+                <div class="input-field col s12">
+                  <input id="psw" type="password">
+                  <label for="psw">Password</label>
+                </div>
+              </div>
+            </form>
+          </div>
+        <a class="btn-large" onclick="login()">Login</a>
+        <br>
+        <br>
+        <br>
+        <a href="/admin">Login as Admin</a>
     </div>
-    <div class="container">
-        <div class="row">
-            <div class="col s12">
-                <a class="btn-large" href="/reports">Reports</a>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col s12">
-                <a class="btn-large" href="/login">Create Mission</a>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col s12">
-                <a class="btn-large" href="/register-face">Register Face</a>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col s12">
-                <a class="btn-large" href="/all-registered-faces">All Registered Faces</a>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col s12">
-                <a class="btn-large" href="/admin">Admin Login</a>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col s12">
-                <a class="btn-large" href="/all-users">All Users</a>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col s12">
-                <a class="btn-large" href="/add-user">Add User</a>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col s12">
-                <a class="btn-large" href="/home">home</a>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col s12">
-                <a class="btn-large" href="/login">login</a>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col s12">
-                <a class="btn-large" href="/select-drone">select-drone</a>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col s12">
-                <a class="btn-large" href="/telemetry">telemetry</a>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col s12">
-                <a class="btn-large" href="/initialize-mission">initialize-mission</a>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col s12">
-                <a class="btn-large" href="/mission">mission</a>
-            </div>
-        </div>
-    </div>
+
+    <script>
+      function login(){
+        username = document.getElementById('userid').value
+        psw = document.getElementById('psw').value
+        base_url = window.location.origin;
+        url = base_url + '/user-login-chk?username='+username+'&psw='+psw
+        $.get(url, function(data, status){
+          for(i in data){
+            un = data[i].username
+            p = data[i].psw
+            auth = (un == username) && (p == psw)
+            if(auth){
+              fullname = data[i].fullname
+              timestamp = String(Math.round(+new Date()/1000));
+              url = `${base_url}/last-login?timestamp=${timestamp}&fullname=${fullname}`
+              $.get(url, function(data, status){
+                if(status == 'success'){
+                  console.log('Login Session Saved')
+                } else {
+                    console.log('couldnt login')
+                }
+            })
+              window.open(base_url+'/dashboard',"_self")
+              break
+            }
+          }
+          if(auth === false){
+            M.toast({html: 'Wrong Username or Password', displayLength: 6000})
+          }
+        })
+      }
+    </script>
 </body>
 </html>
