--- a/src/html/reports.html
+++ b/src/html/reports.html
@@ -1,48 +1,134 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Compiled and minified CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<!DOCTYPE html> 
+<html> 
 
-    <!-- Compiled and minified JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-            
-    <title>Reports</title>
-</head>
-<body>
-  <div class="row">
-      <br>
-      <div class="col s12">
-          <img class="right" src="https://i.ibb.co/gdbSRYS/pngfind-com-uae-flag-png-5861568.png" width="80">
-      </div>
-  </div>
-    <div class="container">
-      <h4 class="center">Reports</h4>
-      <br>
-      <br>
-      <table class="striped">
-        <thead>
-          <tr>
-            <th>Report ID</th>
-            <th>Date</th>
-            <th>Time</th>
-            <th class="right">Police Name</th>
-          </tr>
-        </thead>
+<head> 
+	<link rel="stylesheet" href= 
+"https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css"> 
 
-        <tbody id='lst'>
-        </tbody>
-      </table>
-    </div>
-    <script>
+	<link href= 
+"https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> 
+<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+
+	<script src= 
+"https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"> 
+	</script> 
+	<title>Reports</title>
+</head> 
+
+<body> 
+		<!-- Modal Structure -->
+        <div id="mdl">
+        </div>
+
+		
+		<div class="row">
+			<br>
+			<div class="col s12">
+				<img class="right" src="https://i.ibb.co/gdbSRYS/pngfind-com-uae-flag-png-5861568.png" width="80">
+			</div>
+		</div>
+		  <div class="container">
+			<h4 class="center">Reports</h4>
+			<br>
+			<br>
+			<table class="striped">
+			  <thead>
+				<tr>
+				  <th>Report ID</th>
+				  <th>Date</th>
+				  <th>Time</th>
+				  <th>Reported By</th>
+				  <th class="right">More Details</th>
+				</tr>
+			  </thead>
+			  <a href=""></a>
+			  <tbody id='lst'>
+			  </tbody>
+			</table>
+		  </div>
+          
+
+	<script> 
+		$(document).ready(function () { 
+            var mdl_element = `
+            <div id="demo-modal" class="modal"> 
+                <div class="modal-content center"> 
+                    <h4 id="report_header">Full Report</h4>
+                    <div>
+                        <table class="striped">
+                            <thead>
+                            <tr>
+                                <th class="left">Report ID</th>
+                                <th id="report_id"></th>
+                            </tr>
+                            </thead>
+
+                            <tbody>
+                                <tr>
+                                <td><strong>Date</strong></td>
+                                <td id="report_date"></td>
+                                </tr>
+                                <tr>
+                                <td><strong>Time</strong></td>
+                                <td id="report_time"></td>
+                                </tr>
+                                <tr>
+                                <td><strong>Mission Name</strong></td>
+                                <td id="mission_name"></td>
+                                </tr>
+                                <td><strong>Mission Location</strong></td>
+                                <td id="mission_location"></td>
+                                </tr>
+                                <tr>
+                                <td><strong>Police Officer Name</strong></td>
+                                <td id="police_name"></td>
+                                </tr>
+                                <tr>
+                                <td><strong>Convict Name</strong></td>
+                                <td id="convict_name"></td>
+                                </tr>
+                                <tr>
+                                <td><strong>Convict Age</strong></td>
+                                <td id="convict_age"></td>
+                                </tr>
+                                <tr>
+                                <td><strong>Previous Case</strong></td>
+                                <td id="previous_case"></td>
+                                </tr>
+                                <tr>
+                                    <td><strong>Auto Detection Photo</strong></td>
+                                    <td><img id="auto_det_img" src=""></td>
+                                </tr>
+                                <tr>
+                                    <td><strong>Registered Face Image</strong></td>
+                                    <td><img id="registered_face" src=""></td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div> 
+
+                <div class="modal-footer"> 
+                    <a href="#!" class="modal-action 
+                        modal-close waves-effect waves-green 
+                        btn green lighten-1"> 
+                        Close 
+                    </a> 
+                </div> 
+        </div> 
+            `
+            document.getElementById('mdl').insertAdjacentHTML('beforeend', mdl_element);
+			$('.modal').modal(); 
+		}) 
+	</script>
+	
+	<script>
         base_url = window.location.origin
-        url = base_url + '/get-all-reports-db'        
+        url = base_url + '/get-all-reports-db'  
+        let reports;
         $.getJSON( url, function(data) {
             console.log( "success" );
+            reports = data;
             var ul = document.getElementById("lst");            
                 for(i in data){
                     var html_to_insert = `
@@ -50,7 +136,8 @@
                         <td>${data[i]._id.slice(0, 8)}</td>
                         <td>${data[i].date}</td>
                         <td>${data[i].time}</td>
-                        <td class="right">${data[i].police_name}</td>
+                        <td>${data[i].officer_name}</td>
+                        <td class="right"><a class="waves-effect waves-light btn green darken-1 modal-trigger" href="#demo-modal"  onclick="readMoreClicked(${i})"> Read More</a></td>
                     </tr>`
                     document.getElementById('lst').insertAdjacentHTML('beforeend', html_to_insert);
                         }
@@ -64,5 +151,21 @@
                         console.log( "complete" );
             });
     </script>
-</body>
-</html>
+    <script>
+        function readMoreClicked(idx){
+            document.getElementById('report_id').innerText = `${reports[idx]._id.slice(0, 8)}`
+            document.getElementById('report_date').innerText = `${reports[idx].date}`
+            document.getElementById('report_time').innerText = `${reports[idx].time}`
+            document.getElementById('mission_name').innerText = `${reports[idx].mission_name}`
+            document.getElementById('mission_location').innerText = `${reports[idx].mission_location}`
+            document.getElementById('police_name').innerText = `${reports[idx].officer_name}`
+            document.getElementById('convict_name').innerText = `${reports[idx].convict_name}`
+            document.getElementById('convict_age').innerText = `${reports[idx].convict_age}`
+            document.getElementById('previous_case').innerText = `${reports[idx].prev_case}`
+            document.getElementById('auto_det_img').src= `${reports[idx].detected_face_img}`
+            document.getElementById('registered_face').src= `${reports[idx].registered_face}`
+        }
+    </script>
+</body> 
+
+</html> 
