flask local server

--- a/html/select-drone.html
+++ b/html/select-drone.html
@@ -27,16 +27,12 @@
                 <div class="input-field col s12">
                     <select>
                         <option value="" disabled selected>Choose your drone</option>
-                        <option value="1">Drone #1</option>
-                        <option disabled value="2">Drone #2</option>
-                        <option disabled value="3">Drone #3</option>
+                        <option value="1">DJI-Tello #1</option>
                     </select>
                     <label>Available Drones</label>
                 </div>
 
                 <div style="padding-top: 250px;">
-                    <h5>Drone Information</h5>
-                    <a class="btn-large" href="/telemetry">Telemetry</a>
                     <a class="btn-large" onclick="startPy()">Connect</a>
                 </div>
                 
