--- a/html/select-drone.html
+++ b/html/select-drone.html
@@ -81,17 +81,17 @@
                 window.open(telemetry_url,"_self")
             }, 6000);
 
-            // $.getJSON( start_script_url, function(data) {
-            //     console.log( "success" );
-            // }).done(function() {
-            //     console.log( "second success" );
-            // })
-            // .fail(function() {
-            //     console.log( "error" );
-            // })
-            // .always(function() {
-            //     console.log( "complete" );
-            //     });
+            $.getJSON( start_script_url, function(data) {
+                console.log( "success" );
+            }).done(function() {
+                console.log( "second success" );
+            })
+            .fail(function() {
+                console.log( "error" );
+            })
+            .always(function() {
+                console.log( "complete" );
+                });
         }
     </script>
 </body>
