Dashboard link add both for admin and user

--- a/html/add-user.html
+++ b/html/add-user.html
@@ -13,6 +13,14 @@
     <title>Add User</title>
 </head>
 <body>
+  <div class="row">
+      <br>
+      <div class="col s12">
+          <a href="/admin-dashboard">
+              <img class="right" src="https://i.ibb.co/gdbSRYS/pngfind-com-uae-flag-png-5861568.png" width="80">
+          </a>
+      </div>
+  </div>
     <div class="container center">
         <br>
         <br>
@@ -47,7 +55,8 @@
             username = document.getElementById('userid').value
             psw = document.getElementById('psw').value
             base_url = window.location.origin;
-            url = `${base_url}/add-user-db?psw=${psw}&username=${username}&fullname=${fullname}`
+            // url = base_url + '/add-user-db?username='+username+'&psw='+psw
+            url = `${base_url}/add-user-db?username=${username}&fullname=${fullname}&psw=${psw}`
             console.log(url)
             $.get(url, function(data, status){
                 if(status == 'success'){
