--- a/html/register-face.html
+++ b/html/register-face.html
@@ -13,6 +13,14 @@
     <title>Face Register</title>
 </head>
 <body>
+  <div class="row">
+      <br>
+      <div class="col s12">
+          <a href="/admin-dashboard">
+              <img class="right" src="https://i.ibb.co/gdbSRYS/pngfind-com-uae-flag-png-5861568.png" width="80">
+          </a>
+      </div>
+  </div>
     <div class="container center">
       <br>
       <br>
