--- a/html/reports.html
+++ b/html/reports.html
@@ -23,9 +23,11 @@
 		
 		<div class="row">
 			<br>
-			<div class="col s12">
-				<img class="right" src="https://i.ibb.co/gdbSRYS/pngfind-com-uae-flag-png-5861568.png" width="80">
-			</div>
+            <div class="col s12">
+                <a href="/dashboard">
+                    <img class="right" src="https://i.ibb.co/gdbSRYS/pngfind-com-uae-flag-png-5861568.png" width="80">
+                </a>
+            </div>
 		</div>
 		  <div class="container">
 			<h4 class="center">Reports</h4>
