--- a/html/admin-all-users.html
+++ b/html/admin-all-users.html
@@ -14,6 +14,14 @@
     <title>All Users</title>
 </head>
 <body>
+    <div class="row">
+        <br>
+        <div class="col s12">
+            <a href="/admin-dashboard">
+                <img class="right" src="https://i.ibb.co/gdbSRYS/pngfind-com-uae-flag-png-5861568.png" width="80">
+            </a>
+        </div>
+    </div>
     <div class="container center">
       <h4 class="center">All Users</h4>
       <table class="striped">
