--- a/html/all-registered-faces.html
+++ b/html/all-registered-faces.html
@@ -17,7 +17,9 @@
   <div class="row">
       <br>
       <div class="col s12">
-          <img class="right" src="https://i.ibb.co/gdbSRYS/pngfind-com-uae-flag-png-5861568.png" width="80">
+          <a href="/admin-dashboard">
+              <img class="right" src="https://i.ibb.co/gdbSRYS/pngfind-com-uae-flag-png-5861568.png" width="80">
+          </a>
       </div>
   </div>
     <div class="container">
