--- a/html/initialize-mission.html
+++ b/html/initialize-mission.html
@@ -11,7 +11,9 @@
     <div class="row">
         <br>
         <div class="col s12">
-            <img class="right" src="https://i.ibb.co/gdbSRYS/pngfind-com-uae-flag-png-5861568.png" width="80">
+            <a href="/dashboard">
+                <img class="right" src="https://i.ibb.co/gdbSRYS/pngfind-com-uae-flag-png-5861568.png" width="80">
+            </a>
         </div>
     </div>
 
