--- a/html/select-drone.html
+++ b/html/select-drone.html
@@ -19,7 +19,9 @@
         <div class="row">
             <br>
             <div class="col s12">
-                <img class="right" src="https://i.ibb.co/gdbSRYS/pngfind-com-uae-flag-png-5861568.png" width="80">
+                <a href="/dashboard">
+                    <img class="right" src="https://i.ibb.co/gdbSRYS/pngfind-com-uae-flag-png-5861568.png" width="80">
+                </a>
             </div>
         </div>
         <div class="row">
@@ -78,16 +80,11 @@
             } else {
                 document.getElementById('inital_content').style.visibility = 'hidden';
                 document.getElementById('loader_content').style.visibility = 'visible';
-                start_script_url = 'http://127.0.0.1:5000/start_script'
                 base_url = window.location.origin;
-                telemetry_url = 'http://127.0.0.1:5000/telemetry'        
+                telemetry_url = 'http://127.0.0.1:5000/'        
                 setTimeout(function() {
                     window.open(telemetry_url,"_self")
                 }, 6000);
-
-                $.getJSON( start_script_url, function(data) {
-                    console.log( "." );
-                })
             }
         }
     </script>
