--- a/html/pg.html
+++ b/html/pg.html
@@ -10,63 +10,24 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
             
-    <title>Edit User</title>
+    <title></title>
 </head>
 <body>
-  <div class="row">
-      <br>
-      <div class="col s12">
-          <a href="/admin-dashboard">
-              <img class="right" src="https://i.ibb.co/gdbSRYS/pngfind-com-uae-flag-png-5861568.png" width="80">
-          </a>
-      </div>
-  </div>
-    <div class="container center">
-        <br>
-        <br>
-        <br>
-        <img src="https://images-na.ssl-images-amazon.com/images/I/31jykaOuf9L._AC_SX466_.jpg" width="400">
-        <br>
-        <br>
-        <div class="row">
-            <form class="col s12">
-              <div class="row">
-                <div class="input-field col s12">
-                  <input placeholder="Full Name" id="full_name" type="text">
-                  <label for="full_name">Full Name</label>
-                </div>
-                <div class="input-field col s12">
-                  <input placeholder="User ID" id="userid" type="text">
-                  <label for="userid">Username or Email</label>
-                </div>
-                <div class="input-field col s12">
-                  <input placeholder="Password" id="psw" type="text">
-                  <label for="psw">Password</label>
-                </div>
-              </div>
-            </form>
-          </div>
-        <a class="btn-large" onclick="add_user()">Save</a>
-    </div>
 
-    <script>
-      ident = new URL(window.location.href).searchParams.get("ident");
-      base_url = window.location.origin
-      url = base_url + '/all-users-db'
-      var idx;
-      var data_obj;
-      $.getJSON( url, function(data) {
-        data_obj = data;
-          console.log( "success" );
-          for(i in data){
-            // console.log(`${data[i]['_id']}\t,${ident}`)
-            if(data[i]['_id'] == ident){
-              idx = i;
-              document.getElementById('full_name').value = data[i]['fullname']
-              document.getElementById('userid').value = data[i]['username']
-              document.getElementById('psw').value = data[i]['psw']
-            }
-          }
+  <script defer>
+    not_url = 'https://node-red-arzjk-2021-01-25.eu-gb.mybluemix.net/get-all-not-db'
+    not_delay = 60*10
+    function executeQuery() {
+      $.getJSON( not_url, function(data) {
+              for(d in data){
+                current_ts = Math.floor(Date.now() / 1000)
+                not_ts = data[d]['ts']
+                diff = current_ts - not_ts
+                console.log(diff)
+                // if(diff < not_delay){
+                //   alert(data[d]['msg'])
+                // }
+              }
           }).done(function() {
               console.log( "second success" );
           })
@@ -75,43 +36,14 @@
           })
           .always(function() {
               console.log( "complete" );
-          });
-    </script>
-  
-    <script>
-        function add_user(){
-          fullname = document.getElementById('full_name').value
-          username = document.getElementById('userid').value
-          psw = document.getElementById('psw').value
-          base_url = window.location.origin;
-          // url = base_url + '/add-user-db?username='+username+'&psw='+psw
-          url = `${base_url}/add-user-db?username=${username}&fullname=${fullname}&psw=${psw}`
-          $.get(url, function(data, status){
-              if(status == 'success'){
-                  console.log('User Edited!')
-                  M.toast({html: 'User Info Edited!'})
-                  del_user(ident);
-                  setTimeout(function() { window.open(`${base_url}/all-users`,"_self")}, 2000);
-              } else {
-                  M.toast({html: `Couldn't edit user data`})
-              }
-          })
-        }
-    </script>
+              });
+      setTimeout(executeQuery, 5000); // you could choose not to continue on failure...
+  }
 
-    
-  <script>
-    function del_user(uid){
-        base_url = window.location.origin;
-        url = base_url + '/del-user?_id='+uid
-        $.get(url, function(data, status){
-            if(status == 'success'){
-                console.log('Old User Deleted!')
-            } else {
-                M.toast({html: `Couldn't delete user`})
-            }
-        })
-    }
+  $(document).ready(function() {
+    // run the first time; all subsequent calls will take care of themselves
+    setTimeout(executeQuery, 1000);
+  });
   </script>
 </body>
 </html>
